--- a/_includes/css/common.css
+++ b/_includes/css/common.css
@@ -19,11 +19,7 @@ h1, h2, h3, .font-alt {
   font-family: "Montserrat Alternates", sans-serif;
 }
 
-h1 {
-  color: var(--color-dark-grey);
-}
-
-h2, h3 {
+h1, h2, h3 {
   color: var(--color-dark-grey);
 }
 
