--- a/css/main.css
+++ b/css/main.css
@@ -9,4 +9,3 @@
 {% include css/navigation.css %}
 {% include css/scroll-hinter.css %}
 {% include css/case-studies.css %}
-{% include css/qc-study.css %}
